<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maa.testproject.MainActivity">

    <!--<FrameLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--tools:ignore="MissingConstraints"-->
    <!--tools:layout_editor_absoluteX="0dp"-->
    <!--tools:layout_editor_absoluteY="60dp">-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/ghost_option_bg"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteX="34dp" />

    <TextView
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:padding="15dp"
        android:text="Choose your ghost"
        android:textColor="@color/colorText"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/h_father"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/h_father"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ghostmodehighlight"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="17dp" />

    <ImageView
        android:id="@+id/h_precise"
        android:layout_width="350dp"
        android:layout_height="67dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ghostmodehighlight"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671"
        tools:layout_editor_absoluteX="17dp" />

    <ImageView
        android:id="@+id/ghost1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/circle1"
        android:layout_alignStart="@+id/circle1"
        android:layout_centerVertical="true"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:elevation="2dp"
        android:src="@drawable/ghost2x"
        app:layout_constraintBottom_toTopOf="@+id/circle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="@+id/h_father" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/circle_ghost"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="166dp" />


    <TextView
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:padding="5dp"
        android:text="Precise Ghost"
        android:textColor="@color/colorText"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287"
        tools:layout_editor_absoluteX="110dp" />

    <TextView
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/two"
        android:fontFamily="@font/montserrat_regular"
        android:padding="5dp"
        android:text="@string/preciseghost"
        android:textColor="@color/colorText"
        android:textSize="10sp"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="175dp" />


    <ImageView
        android:id="@+id/h_frozen"
        android:layout_width="350dp"
        android:layout_height="66dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ghostmodehighlight"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482"
        tools:layout_editor_absoluteX="17dp" />

    <ImageView
        android:id="@+id/ghost2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/circle2"
        android:layout_alignStart="@+id/circle2"
        android:layout_centerVertical="true"
        android:layout_marginBottom="188dp"
        android:layout_marginEnd="304dp"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        android:src="@drawable/ghostoffline3x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ghost3"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="50dp"
        android:layout_height="54dp"
        android:layout_alignLeft="@+id/h_frozen"
        android:layout_alignStart="@+id/h_frozen"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/circle_ghost"
        app:layout_constraintBottom_toTopOf="@+id/ghost2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle1" />


    <TextView
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:padding="5dp"
        android:text="Frozen Ghost"
        android:textColor="@color/colorText"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/two"
        app:layout_constraintVertical_bias="0.217"
        tools:layout_editor_absoluteX="110dp" />

    <TextView
        android:id="@+id/five"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/four"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:padding="5dp"
        android:text="@string/frozenghost"
        android:textColor="@color/colorText"
        android:textSize="10sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="109dp" />


    <ImageView
        android:id="@+id/ghost3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        android:src="@drawable/ghostonline3x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:layout_editor_absoluteX="49dp" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/circle_ghost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle2"
        app:layout_constraintVertical_bias="0.005"
        tools:layout_editor_absoluteX="37dp" />


    <TextView
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:padding="5dp"
        android:text="Superior Ghost"
        android:textColor="@color/colorText"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622"
        tools:layout_editor_absoluteX="110dp" />

    <TextView
        android:id="@+id/seven"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/six"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:padding="5dp"
        android:text="@string/superiorghost"
        android:textColor="@color/colorText"
        android:textSize="10sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677"
        tools:layout_editor_absoluteX="106dp" />


    <TextView
        android:id="@+id/eight"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_alignLeft="@+id/one"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/hintghost"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="10sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        tools:ignore="MissingConstraints,NotSibling" />


    <!--<Button-->
    <!--android:id="@+id/dismiss"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="20dp"-->
    <!--android:background="@drawable/dismiss_button"-->
    <!--android:text="Dismiss"-->
    <!--android:textAllCaps="false"-->
    <!--android:textColor="@color/colorText"-->
    <!--android:textSize="13sp"-->
    <!--android:fontFamily="@font/montserrat_regular"-->
    <!--android:textStyle="bold"-->
    <!--android:layout_marginTop="288dp"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:gravity="center"/>-->

</android.support.constraint.ConstraintLayout>